apps-prd/departamentos/sub-departamento/projeto1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: app-demo
  labels:
    app: app-demo
