apps-prd/departamentos/sub-departamento/projeto1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  labels:
    app: app-demo
spec:
  selector:
    app: app-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
