apps-prd/departamentos/sub-departamento/projeto1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: projeto1
  labels:
    app: projeto1
spec:
  to:
    kind: Service
    name: projeto1
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
